$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-25 (opened March 10, 2011)

	* ordisurf: got a formula interface as an alternative to define
	the model.

	* metaMDSrotate: can now rotate > 2-dim solutions so that the
	first axis is parallel to a given vector and all others are
	orthogonal to the vector (and rotated to PC if they were
	originally). Earlier had argument 'choices' which was supposed to
	select only two axes to be rotated (but failed before rev 1533),
	but now lost 'choices' and always uses all dimensions, and
	orthogonalies dim 2 and beyond against the given vector. There was
	a query in R-sig-ecology on having two vectors in 3-dim ordination
	which triggered the current changes, but this does not still
	answer to the question of
	https://stat.ethz.ch/pipermail/r-sig-ecology/2011-March/001947.html.
	It would be possible to have this with recursive metaMDSrotate for
	1..N for first 'vec', then 2..N for the second 'vec', but the
	later 'vec's could be correlated with previous axes.
	
Version 1.18-24 (closed March 10, 2011)

	* cca: will return NULL item for CCA only if constraints were not
	given. If the CCA component has zero rank (= constraints were
	aliased or were orthogonal to the data), will still return a CCA
	item with zero eigenvalue, rank, scores etc plus info on
	"alias". The residual component will never be NULL, but similar
	zero-containing component is returned even when there is no
	residual variation.  Usually these changes only manifest in
	arbitrary data sets, but we have had email queries in R-sig-eco on
	completely aliased constrainsts when users assumed that model
	cca(y ~ A + Condition(A)) would be similar to a random effects
	model and A could be analysed both as a Condition and as a
	Constraint instead of being aliased. Naturally, overfitted models
	with empty residual components do appear often. Currently the
	printed output includes these zero items with Inertia and Rank 0,